--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>weld-core-parent</artifactId>
     <packaging>pom</packaging>
-    <version>3.0.0.Final</version>
+    <version>3.0.0.Final-SNAPSHOT</version>
 
     <name>Weld Parent</name>
 
@@ -565,7 +565,7 @@
         <connection>scm:git:git@github.com:weld/core.git</connection>
         <developerConnection>scm:git:git@github.com:weld/core.git</developerConnection>
         <url>scm:git:git@github.com:weld/core.git</url>
-      <tag>3.0.0.Final</tag>
+      <tag>3.0.0.Final-SNAPSHOT</tag>
   </scm>
 
 
